--- a/Hyun/text.css
+++ b/Hyun/text.css
@@ -70,3 +70,8 @@ footer {
   border-top: 1px solid black;
   padding: 30px 0px;
 }
+
+#carDataForm {
+  border: 3px solid black;
+  text-align: center;
+}
